{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 804,
  "lineage": "3f3d87ef-3a0b-e5f1-cedd-8bb08ea18073",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:481604401489:loadbalancer/app/devops2-g4-shared-alb-prod/64e45b0de4a21709",
            "arn_suffix": "app/devops2-g4-shared-alb-prod/64e45b0de4a21709",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-devops2-g4-shared-alb-prod-145202707.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:481604401489:loadbalancer/app/devops2-g4-shared-alb-prod/64e45b0de4a21709",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops2-g4-shared-alb-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e182467cce531240"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c6f55e184d62f245"
              },
              {
                "subnet_id": "subnet-0cd333613fa496333"
              }
            ],
            "subnets": [
              "subnet-0c6f55e184d62f245",
              "subnet-0cd333613fa496333"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-shared-alb-prod",
              "Service": "devops2-g4-shared"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-shared-alb-prod",
              "Service": "devops2-g4-shared"
            },
            "vpc_id": "vpc-033101c411eb1b6b1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:481604401489:listener/app/devops2-g4-shared-alb-prod/64e45b0de4a21709/e482983bca53c09e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Service not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:481604401489:listener/app/devops2-g4-shared-alb-prod/64e45b0de4a21709/e482983bca53c09e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:481604401489:loadbalancer/app/devops2-g4-shared-alb-prod/64e45b0de4a21709",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-shared-http-listener-prod",
              "Service": "devops2-g4-shared"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-shared-http-listener-prod",
              "Service": "devops2-g4-shared"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.shared",
            "module.alb_security_group.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group/sg-0e182467cce531240",
            "description": "Security group for Application Load Balancer",
            "egress": [],
            "id": "sg-0e182467cce531240",
            "ingress": [],
            "name": "devops2-g4-alb-sg-prod",
            "name_prefix": "",
            "owner_id": "481604401489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-07d56d61ee193ead6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow all outbound to ECS tasks",
            "from_port": 0,
            "id": "sgr-07d56d61ee193ead6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-075f32d6f797c3ab2",
            "security_group_id": "sg-0e182467cce531240",
            "security_group_rule_id": "sgr-07d56d61ee193ead6",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.ecs_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-0d924430b999a0b1a",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow HTTP from VPC Link",
            "from_port": 80,
            "id": "sgr-0d924430b999a0b1a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e182467cce531240",
            "security_group_rule_id": "sgr-0d924430b999a0b1a",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-05627dc8f5c9697c8",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from VPC Link",
            "from_port": 443,
            "id": "sgr-05627dc8f5c9697c8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e182467cce531240",
            "security_group_rule_id": "sgr-05627dc8f5c9697c8",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-ingress-1-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-alb-sg-ingress-1-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group/sg-075f32d6f797c3ab2",
            "description": "Security group for ECS Fargate tasks",
            "egress": [],
            "id": "sg-075f32d6f797c3ab2",
            "ingress": [],
            "name": "devops2-g4-ecs-sg-prod",
            "name_prefix": "",
            "owner_id": "481604401489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-0d0145fc136e86eaf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": -1,
            "id": "sgr-0d0145fc136e86eaf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-075f32d6f797c3ab2",
            "security_group_rule_id": "sgr-0d0145fc136e86eaf",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-077a038bd38e05a45",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow traffic from ALB",
            "from_port": 0,
            "id": "sgr-077a038bd38e05a45",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e182467cce531240",
            "security_group_id": "sg-075f32d6f797c3ab2",
            "security_group_rule_id": "sgr-077a038bd38e05a45",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-ecs-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.ecs_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b10780c831fc490d",
            "arn": "arn:aws:ec2:us-east-1:481604401489:elastic-ip/eipalloc-0b10780c831fc490d",
            "domain": "vpc",
            "id": "eipalloc-0b10780c831fc490d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-173-240.compute-1.amazonaws.com",
            "public_ip": "54.211.173.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-eip-us-east-1a-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-eip-us-east-1a-prod",
              "Service": "devops2-g4-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a58036921e4a3dd8",
            "arn": "arn:aws:ec2:us-east-1:481604401489:elastic-ip/eipalloc-0a58036921e4a3dd8",
            "domain": "vpc",
            "id": "eipalloc-0a58036921e4a3dd8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-115-175.compute-1.amazonaws.com",
            "public_ip": "35.169.115.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-eip-us-east-1b-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-eip-us-east-1b-prod",
              "Service": "devops2-g4-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:internet-gateway/igw-01417c07731ea41cc",
            "id": "igw-01417c07731ea41cc",
            "owner_id": "481604401489",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-igw-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-igw-prod",
              "Service": "devops2-g4-app"
            },
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b10780c831fc490d",
            "association_id": "eipassoc-04316312020d83727",
            "connectivity_type": "public",
            "id": "nat-0e46c0d06887e7932",
            "network_interface_id": "eni-09cf2285ccb24a966",
            "private_ip": "10.0.1.40",
            "public_ip": "54.211.173.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d69c1302b4d83636",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-gateway-us-east-1a-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-gateway-us-east-1a-prod",
              "Service": "devops2-g4-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a58036921e4a3dd8",
            "association_id": "eipassoc-0033a5a241bca4e84",
            "connectivity_type": "public",
            "id": "nat-08459b3b606080fa8",
            "network_interface_id": "eni-0bec8fdb4cf6894f9",
            "private_ip": "10.0.2.76",
            "public_ip": "35.169.115.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00ae0a0457cc49a05",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-gateway-us-east-1b-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-nat-gateway-us-east-1b-prod",
              "Service": "devops2-g4-app"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:route-table/rtb-087341a109966c93a",
            "id": "rtb-087341a109966c93a",
            "owner_id": "481604401489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e46c0d06887e7932",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-rt-us-east-1a-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-rt-us-east-1a-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:route-table/rtb-03d5bf8545945f678",
            "id": "rtb-03d5bf8545945f678",
            "owner_id": "481604401489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08459b3b606080fa8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-rt-us-east-1b-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-rt-us-east-1b-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:route-table/rtb-0674036f0217800e7",
            "id": "rtb-0674036f0217800e7",
            "owner_id": "481604401489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01417c07731ea41cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-rt-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-rt-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049b872d6883c65d8",
            "route_table_id": "rtb-087341a109966c93a",
            "subnet_id": "subnet-0c6f55e184d62f245"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e88aca33b42c8d",
            "route_table_id": "rtb-03d5bf8545945f678",
            "subnet_id": "subnet-0cd333613fa496333"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c3d1312fb5e626d",
            "route_table_id": "rtb-0674036f0217800e7",
            "subnet_id": "subnet-0d69c1302b4d83636"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b37cd943bf889a93",
            "route_table_id": "rtb-0674036f0217800e7",
            "subnet_id": "subnet-00ae0a0457cc49a05"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:subnet/subnet-0c6f55e184d62f245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6f55e184d62f245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481604401489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-subnet-us-east-1a-prod",
              "Service": "devops2-g4-app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-subnet-us-east-1a-prod",
              "Service": "devops2-g4-app",
              "Type": "private"
            },
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:subnet/subnet-0cd333613fa496333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd333613fa496333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "481604401489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-subnet-us-east-1b-prod",
              "Service": "devops2-g4-app",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-private-subnet-us-east-1b-prod",
              "Service": "devops2-g4-app",
              "Type": "private"
            },
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:subnet/subnet-0d69c1302b4d83636",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d69c1302b4d83636",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481604401489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-subnet-us-east-1a-prod",
              "Service": "devops2-g4-app",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-subnet-us-east-1a-prod",
              "Service": "devops2-g4-app",
              "Type": "public"
            },
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:subnet/subnet-00ae0a0457cc49a05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ae0a0457cc49a05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481604401489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-subnet-us-east-1b-prod",
              "Service": "devops2-g4-app",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-public-subnet-us-east-1b-prod",
              "Service": "devops2-g4-app",
              "Type": "public"
            },
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:vpc/vpc-033101c411eb1b6b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042cb10ef562b97ec",
            "default_route_table_id": "rtb-06629c43573d45af9",
            "default_security_group_id": "sg-03e147fe16ccbc4cb",
            "dhcp_options_id": "dopt-0482c00c49b4ef8b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-033101c411eb1b6b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06629c43573d45af9",
            "owner_id": "481604401489",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-app-vpc-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-app-vpc-prod",
              "Service": "devops2-g4-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_link_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group/sg-03c34378db0871061",
            "description": "Security group for API Gateway VPC Link",
            "egress": [],
            "id": "sg-03c34378db0871061",
            "ingress": [],
            "name": "devops2-g4-vpclink-sg-prod",
            "name_prefix": "",
            "owner_id": "481604401489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-prod",
              "Service": "devops2-g4-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-033101c411eb1b6b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_link_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-068872b85253751f6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow traffic to ALB",
            "from_port": 0,
            "id": "sgr-068872b85253751f6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e182467cce531240",
            "security_group_id": "sg-03c34378db0871061",
            "security_group_rule_id": "sgr-068872b85253751f6",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-egress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb_security_group.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc_link_security_group.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_link_security_group",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:481604401489:security-group-rule/sgr-0ea00c3a7b5321f83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-0ea00c3a7b5321f83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03c34378db0871061",
            "security_group_rule_id": "sgr-0ea00c3a7b5321f83",
            "tags": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "devops2-g4-vpclink-sg-ingress-0-prod",
              "Service": "devops2-g4-app"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc_link_security_group.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}